fixed line break in column

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ main {
   font-family:'Roboto', sans-serif;
   font-weight:500;
   margin:0;
+  margin-top:10px;
   text-align:center;
 }
 
@@ -42,6 +43,7 @@ main {
 
 .column {
   display:inline-flex;
+  flex-direction:column;
 }
 
 .setting {
